ProtoParser/Antlr4/ProtobufParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ProtobufParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class ProtobufParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WS=1, LINE_COMMENT=2, BLOCK_COMMENT=3, BYTE_ORDER_MARK=4, SYNTAX=5, IMPORT=6, 
		WEAK=7, PUBLIC=8, PACKAGE=9, OPTION=10, INF=11, NAN=12, REPEATED=13, OPTIONAL=14, 
		REQUIRED=15, BOOL=16, STRING=17, BYTES=18, FLOAT=19, DOUBLE=20, INT32=21, 
		INT64=22, UINT32=23, UINT64=24, SINT32=25, SINT64=26, FIXED32=27, FIXED64=28, 
		SFIXED32=29, SFIXED64=30, GROUP=31, ONEOF=32, MAP=33, EXTENSIONS=34, TO=35, 
		MAX=36, RESERVED=37, ENUM=38, MESSAGE=39, EXTEND=40, SERVICE=41, RPC=42, 
		STREAM=43, RETURNS=44, IDENTIFIER=45, INT_LITERAL=46, FLOAT_LITERAL=47, 
		INVALID_INT_LITERAL=48, INVALID_FLOAT_LITERAL=49, STRING_LITERAL=50, SEMICOLON=51, 
		COMMA=52, DOT=53, SLASH=54, COLON=55, EQUALS=56, MINUS=57, PLUS=58, L_PAREN=59, 
		R_PAREN=60, L_BRACE=61, R_BRACE=62, L_BRACKET=63, R_BRACKET=64, L_ANGLE=65, 
		R_ANGLE=66;
	public const int
		RULE_file = 0, RULE_fileElement = 1, RULE_commentDecl = 2, RULE_syntaxDecl = 3, 
		RULE_syntaxLevel = 4, RULE_stringLiteral = 5, RULE_emptyDecl = 6, RULE_packageDecl = 7, 
		RULE_packageName = 8, RULE_importDecl = 9, RULE_importedFileName = 10, 
		RULE_typeName = 11, RULE_qualifiedIdentifier = 12, RULE_fieldDeclTypeName = 13, 
		RULE_messageFieldDeclTypeName = 14, RULE_extensionFieldDeclTypeName = 15, 
		RULE_oneofFieldDeclTypeName = 16, RULE_methodDeclTypeName = 17, RULE_fieldDeclIdentifier = 18, 
		RULE_messageFieldDeclIdentifier = 19, RULE_extensionFieldDeclIdentifier = 20, 
		RULE_oneofFieldDeclIdentifier = 21, RULE_methodDeclIdentifier = 22, RULE_fullyQualifiedIdentifier = 23, 
		RULE_optionDecl = 24, RULE_compactOptions = 25, RULE_compactOption = 26, 
		RULE_optionName = 27, RULE_optionValue = 28, RULE_scalarValue = 29, RULE_intLiteral = 30, 
		RULE_floatLiteral = 31, RULE_specialFloatLiteral = 32, RULE_messageLiteralWithBraces = 33, 
		RULE_messageTextFormat = 34, RULE_messageLiteralField = 35, RULE_messageLiteralFieldName = 36, 
		RULE_specialFieldName = 37, RULE_extensionFieldName = 38, RULE_typeURL = 39, 
		RULE_value = 40, RULE_messageValue = 41, RULE_messageLiteral = 42, RULE_listLiteral = 43, 
		RULE_listElement = 44, RULE_listOfMessagesLiteral = 45, RULE_messageDecl = 46, 
		RULE_messageName = 47, RULE_messageElement = 48, RULE_messageFieldDecl = 49, 
		RULE_fieldDeclWithCardinality = 50, RULE_fieldCardinality = 51, RULE_fieldName = 52, 
		RULE_fieldNumber = 53, RULE_mapFieldDecl = 54, RULE_mapType = 55, RULE_mapKeyType = 56, 
		RULE_groupDecl = 57, RULE_oneofDecl = 58, RULE_oneofName = 59, RULE_oneofElement = 60, 
		RULE_oneofFieldDecl = 61, RULE_oneofGroupDecl = 62, RULE_extensionRangeDecl = 63, 
		RULE_tagRanges = 64, RULE_tagRange = 65, RULE_tagRangeStart = 66, RULE_tagRangeEnd = 67, 
		RULE_messageReservedDecl = 68, RULE_names = 69, RULE_enumDecl = 70, RULE_enumName = 71, 
		RULE_enumElement = 72, RULE_enumValueDecl = 73, RULE_enumValueName = 74, 
		RULE_enumValueNumber = 75, RULE_enumReservedDecl = 76, RULE_enumValueRanges = 77, 
		RULE_enumValueRange = 78, RULE_enumValueRangeStart = 79, RULE_enumValueRangeEnd = 80, 
		RULE_extensionDecl = 81, RULE_extendedMessage = 82, RULE_extensionElement = 83, 
		RULE_extensionFieldDecl = 84, RULE_serviceDecl = 85, RULE_serviceName = 86, 
		RULE_serviceElement = 87, RULE_methodDecl = 88, RULE_methodName = 89, 
		RULE_inputType = 90, RULE_outputType = 91, RULE_methodElement = 92, RULE_messageType = 93, 
		RULE_identifier = 94, RULE_alwaysIdent = 95, RULE_sometimesIdent = 96;
	public static readonly string[] ruleNames = {
		"file", "fileElement", "commentDecl", "syntaxDecl", "syntaxLevel", "stringLiteral", 
		"emptyDecl", "packageDecl", "packageName", "importDecl", "importedFileName", 
		"typeName", "qualifiedIdentifier", "fieldDeclTypeName", "messageFieldDeclTypeName", 
		"extensionFieldDeclTypeName", "oneofFieldDeclTypeName", "methodDeclTypeName", 
		"fieldDeclIdentifier", "messageFieldDeclIdentifier", "extensionFieldDeclIdentifier", 
		"oneofFieldDeclIdentifier", "methodDeclIdentifier", "fullyQualifiedIdentifier", 
		"optionDecl", "compactOptions", "compactOption", "optionName", "optionValue", 
		"scalarValue", "intLiteral", "floatLiteral", "specialFloatLiteral", "messageLiteralWithBraces", 
		"messageTextFormat", "messageLiteralField", "messageLiteralFieldName", 
		"specialFieldName", "extensionFieldName", "typeURL", "value", "messageValue", 
		"messageLiteral", "listLiteral", "listElement", "listOfMessagesLiteral", 
		"messageDecl", "messageName", "messageElement", "messageFieldDecl", "fieldDeclWithCardinality", 
		"fieldCardinality", "fieldName", "fieldNumber", "mapFieldDecl", "mapType", 
		"mapKeyType", "groupDecl", "oneofDecl", "oneofName", "oneofElement", "oneofFieldDecl", 
		"oneofGroupDecl", "extensionRangeDecl", "tagRanges", "tagRange", "tagRangeStart", 
		"tagRangeEnd", "messageReservedDecl", "names", "enumDecl", "enumName", 
		"enumElement", "enumValueDecl", "enumValueName", "enumValueNumber", "enumReservedDecl", 
		"enumValueRanges", "enumValueRange", "enumValueRangeStart", "enumValueRangeEnd", 
		"extensionDecl", "extendedMessage", "extensionElement", "extensionFieldDecl", 
		"serviceDecl", "serviceName", "serviceElement", "methodDecl", "methodName", 
		"inputType", "outputType", "methodElement", "messageType", "identifier", 
		"alwaysIdent", "sometimesIdent"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'\\uFEFF'", "'syntax'", "'import'", "'weak'", 
		"'public'", "'package'", "'option'", "'inf'", "'nan'", "'repeated'", "'optional'", 
		"'required'", "'bool'", "'string'", "'bytes'", "'float'", "'double'", 
		"'int32'", "'int64'", "'uint32'", "'uint64'", "'sint32'", "'sint64'", 
		"'fixed32'", "'fixed64'", "'sfixed32'", "'sfixed64'", "'group'", "'oneof'", 
		"'map'", "'extensions'", "'to'", "'max'", "'reserved'", "'enum'", "'message'", 
		"'extend'", "'service'", "'rpc'", "'stream'", "'returns'", null, null, 
		null, null, null, null, "';'", "','", "'.'", "'/'", "':'", "'='", "'-'", 
		"'+'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "LINE_COMMENT", "BLOCK_COMMENT", "BYTE_ORDER_MARK", "SYNTAX", 
		"IMPORT", "WEAK", "PUBLIC", "PACKAGE", "OPTION", "INF", "NAN", "REPEATED", 
		"OPTIONAL", "REQUIRED", "BOOL", "STRING", "BYTES", "FLOAT", "DOUBLE", 
		"INT32", "INT64", "UINT32", "UINT64", "SINT32", "SINT64", "FIXED32", "FIXED64", 
		"SFIXED32", "SFIXED64", "GROUP", "ONEOF", "MAP", "EXTENSIONS", "TO", "MAX", 
		"RESERVED", "ENUM", "MESSAGE", "EXTEND", "SERVICE", "RPC", "STREAM", "RETURNS", 
		"IDENTIFIER", "INT_LITERAL", "FLOAT_LITERAL", "INVALID_INT_LITERAL", "INVALID_FLOAT_LITERAL", 
		"STRING_LITERAL", "SEMICOLON", "COMMA", "DOT", "SLASH", "COLON", "EQUALS", 
		"MINUS", "PLUS", "L_PAREN", "R_PAREN", "L_BRACE", "R_BRACE", "L_BRACKET", 
		"R_BRACKET", "L_ANGLE", "R_ANGLE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ProtobufParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ProtobufParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ProtobufParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ProtobufParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ProtobufParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BYTE_ORDER_MARK() { return GetToken(ProtobufParser.BYTE_ORDER_MARK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommentDeclContext[] commentDecl() {
			return GetRuleContexts<CommentDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentDeclContext commentDecl(int i) {
			return GetRuleContext<CommentDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SyntaxDeclContext syntaxDecl() {
			return GetRuleContext<SyntaxDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FileElementContext[] fileElement() {
			return GetRuleContexts<FileElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FileElementContext fileElement(int i) {
			return GetRuleContext<FileElementContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtobufParserVisitor<TResult> typedVisitor = visitor as IProtobufParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 195;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==BYTE_ORDER_MARK) {
				{
				State = 194;
				Match(BYTE_ORDER_MARK);
				}
			}

			State = 200;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 197;
					commentDecl();
					}
					} 
				}
				State = 202;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 204;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SYNTAX) {
				{
				State = 203;
				syntaxDecl();
				}
			}

			State = 209;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2255922982291020L) != 0)) {
				{
				{
				State = 206;
				fileElement();
				}
				}
				State = 211;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 212;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclContext importDecl() {
			return GetRuleContext<ImportDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PackageDeclContext packageDecl() {
			return GetRuleContext<PackageDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OptionDeclContext optionDecl() {
			return GetRuleContext<OptionDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MessageDeclContext messageDecl() {
			return GetRuleContext<MessageDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumDeclContext enumDecl() {
			return GetRuleContext<EnumDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExtensionDeclContext extensionDecl() {
			return GetRuleContext<ExtensionDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ServiceDeclContext serviceDecl() {
			return GetRuleContext<ServiceDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyDeclContext emptyDecl() {
			return GetRuleContext<EmptyDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentDeclContext commentDecl() {
			return GetRuleContext<CommentDeclContext>(0);
		}
		public FileElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtobufParserVisitor<TResult> typedVisitor = visitor as IProtobufParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileElementContext fileElement() {
		FileElementContext _localctx = new FileElementContext(Context, State);
		EnterRule(_localctx, 2, RULE_fileElement);
		try {
			State = 223;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IMPORT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 214;
				importDecl();
				}
				break;
			case PACKAGE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 215;
				packageDecl();
				}
				break;
			case OPTION:
				EnterOuterAlt(_localctx, 3);
				{
				State = 216;
				optionDecl();
				}
				break;
			case MESSAGE:
				EnterOuterAlt(_localctx, 4);
				{
				State = 217;
				messageDecl();
				}
				break;
			case ENUM:
				EnterOuterAlt(_localctx, 5);
				{
				State = 218;
				enumDecl();
				}
				break;
			case EXTEND:
				EnterOuterAlt(_localctx, 6);
				{
				State = 219;
				extensionDecl();
				}
				break;
			case SERVICE:
				EnterOuterAlt(_localctx, 7);
				{
				State = 220;
				serviceDecl();
				}
				break;
			case SEMICOLON:
				EnterOuterAlt(_localctx, 8);
				{
				State = 221;
				emptyDecl();
				}
				break;
			case LINE_COMMENT:
			case BLOCK_COMMENT:
				EnterOuterAlt(_localctx, 9);
				{
				State = 222;
				commentDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_COMMENT() { return GetToken(ProtobufParser.LINE_COMMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_COMMENT() { return GetToken(ProtobufParser.BLOCK_COMMENT, 0); }
		public CommentDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commentDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtobufParserVisitor<TResult> typedVisitor = visitor as IProtobufParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommentDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommentDeclContext commentDecl() {
		CommentDeclContext _localctx = new CommentDeclContext(Context, State);
		EnterRule(_localctx, 4, RULE_commentDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 225;
			_la = TokenStream.LA(1);
			if ( !(_la==LINE_COMMENT || _la==BLOCK_COMMENT) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SyntaxDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SYNTAX() { return GetToken(ProtobufParser.SYNTAX, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(ProtobufParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SyntaxLevelContext syntaxLevel() {
			return GetRuleContext<SyntaxLevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(ProtobufParser.SEMICOLON, 0); }
		public SyntaxDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_syntaxDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtobufParserVisitor<TResult> typedVisitor = visitor as IProtobufParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSyntaxDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SyntaxDeclContext syntaxDecl() {
		SyntaxDeclContext _localctx = new SyntaxDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_syntaxDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 227;
			Match(SYNTAX);
			State = 228;
			Match(EQUALS);
			State = 229;
			syntaxLevel();
			State = 230;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SyntaxLevelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StringLiteralContext stringLiteral() {
			return GetRuleContext<StringLiteralContext>(0);
		}
		public SyntaxLevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_syntaxLevel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtobufParserVisitor<TResult> typedVisitor = visitor as IProtobufParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSyntaxLevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SyntaxLevelContext syntaxLevel() {
		SyntaxLevelContext _localctx = new SyntaxLevelContext(Context, State);
		EnterRule(_localctx, 8, RULE_syntaxLevel);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 232;
			stringLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringLiteralContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING_LITERAL() { return GetTokens(ProtobufParser.STRING_LITERAL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL(int i) {
			return GetToken(ProtobufParser.STRING_LITERAL, i);
		}
		public StringLiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stringLiteral; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtobufParserVisitor<TResult> typedVisitor = visitor as IProtobufParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StringLiteralContext stringLiteral() {
		StringLiteralContext _localctx = new StringLiteralContext(Context, State);
		EnterRule(_localctx, 10, RULE_stringLiteral);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 235;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 234;
				Match(STRING_LITERAL);
				}
				}
				State = 237;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==STRING_LITERAL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
